[gd_scene load_steps=8 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://constant2.smp" type="Sample" id=2]
[ext_resource path="res://explosion.smp" type="Sample" id=3]
[ext_resource path="res://constant2.ogg" type="AudioStream" id=4]

[sub_resource type="GDScript" id=1]

script/source = "extends Control\n\nfunc _draw():\n\t"

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.341772, 1 )
colors = ColorArray( 1, 0.979645, 0.886719, 1, 0.859375, 0.797744, 0.691528, 1, 0.914062, 0.535583, 0, 1 )

[sub_resource type="SampleLibrary" id=3]

samples/constant2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 2 ) }
samples/explosion = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="left" type="Polygon2D" parent="."]

polygon = Vector2Array( -200, 0, 100, 0, 100, 600, -200, 600 )
uv = Vector2Array(  )
color = Color( 1, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( -100, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="right" type="Polygon2D" parent="."]

transform/pos = Vector2( 300, 0 )
polygon = Vector2Array( 0, 0, 300, 0, 300, 600, 0, 600 )
uv = Vector2Array(  )
color = Color( 0, 0.203125, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 600.0
script/script = SubResource( 1 )

[node name="Button" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 200.0
margin/right = 200.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="ScoreLabel" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 125.0
margin/top = 0.0
margin/right = 175.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameOverLabel" type="Label" parent="Control"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = 300.0
margin/bottom = 300.0
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="end_explosion" type="Particles2D" parent="."]

transform/pos = Vector2( 150, 300 )
config/amount = 800
config/lifetime = 3.4
config/emit_timeout = 0.1
config/emitting = false
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 350.0
params/spin_velocity = 40.0
params/orbit_velocity = 0.1
params/gravity_direction = 0.0
params/gravity_strength = 19.69
params/radial_accel = 35.45
params/tangential_accel = 8.86
params/damping = 15.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 8.0
params/hue_variation = 0.92
params/anim_speed_scale = 1.97
params/anim_initial_pos = 0.0
randomness/direction = 0.48
randomness/spread = 0.72
randomness/linear_velocity = 0.4
randomness/damping = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 2 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]


